# secret_santa

./: .gitignore  makefile  pyproject.toml  send_message.py
game/: admin.py  choice.py  choice_gift.py  choice_price_gift.py  forms.py  models.py  urls.py  views.py
game/management/: draw.py  draw_by_schedule.ph
game/migrations/: 0001_initial.py  0002_alter_game_draw_date_alter_game_price_and_more.py  0003_alter_player_name.py  0004_registration_user_alter_player_name.py  0005_remove_registration_email_remove_registration_user_and_more.py  0006_remove_gamecreator_name_and_more.py  0007_alter_player_wishlist.py  0008_alter_game_price_limit.py  0009_gamepassword.py  0010_remove_game_reg_date_limit.py  0011_rename_password_gamepassword_game_password.py  0012_alter_gamepassword_game.py  0013_alter_player_wishlist.py  0014_alter_player_wishlist.py  0015_alter_game_price_limit_alter_player_wishlist.py  0016_alter_game_price_limit.py  0017_alter_game_price_limit.py  0018_game_invitation_email.py  0018_remove_game_slug_remove_player_slug_and_more.py  0019_remove_game_slug_remove_player_slug_and_more.py
secret_santa/: settings.py  urls.py
static/css/: countdown.css
static/js/: countdown.js
templates/: account.html  base.html  congratulations.html  create_game.html  game.html  how_to.html  login.html  password_game.html  registration.html  wishlist.html
