[tool.poetry]
name = "dvmn_secret_santa"
version = "0.1.0"
description = "web based project for devman comunity just for study propose"
authors = ["inkvizitor1991 <mail>", "entropax <entropax@posteo.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
django-crispy-forms = "^1.13.0"
Django = "^4.0"
crispy-bootstrap5 = "^0.6"
django-sendgrid-v5 = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
